5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1667_2327.log
== TEST (2019-04-16 16:18:15) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.upper () == "hermione"
	 (m): 3.7654
		 (s): 2.3479
			bruxo2 = int(input("nome do bruxo:"))
			if bruxo2.upper () == "gina"
			(m): 3.674
				(s): 2.789
-- ERROR:
File "XXXX", line 2
    if bruxo.upper () == "hermione"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:42) 
-- CODE:
bruxo int(input("nome do bruxo:"))	
  if bruxo.upper () == "hermione"
	 (m): 3.7654
		 (s): 2.3479
			bruxo2  int(input("nome do bruxo:"))
			if bruxo2.upper () == "gina"
			(m): 3.674
				(s): 2.789
-- ERROR:
File "XXXX", line 1
    bruxo int(input())	
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:16) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.upper () == "hermione"
	 (m):
			(s): 
			bruxo2 = int(input("nome do bruxo:"))
			if bruxo2.upper () == "gina"
			(m): 
				(s): 
-- ERROR:
File "XXXX", line 2
    if bruxo.upper () == "hermione"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:30) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.lower() == "hermione"
	espaço (m):
	tempo (s): 
-- ERROR:
File "XXXX", line 2
    if bruxo.lower() == "hermione"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:46) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.lower() == 
	espaço (m):
	tempo (s): 
-- ERROR:
File "XXXX", line 2
    if bruxo.lower() == 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:50) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.lower() =
	espaço (m):
	tempo (s): 
-- ERROR:
File "XXXX", line 2
    if bruxo.lower() =
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:41) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.lower() =
	print espaço (m):
	print tempo (s): 
-- ERROR:
File "XXXX", line 2
    if bruxo.lower() =
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:09) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.lower() = "hermione"
	print espaço (m):
	print tempo (s):
		
-- ERROR:
File "XXXX", line 2
    if bruxo.lower() = "hermione"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:11) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.lower() == "hermione"
	print espaço (m):
	print tempo (s):
		bruxo= int(input"nome do bruxo: ")
		if bruxo .lower() == "gina"
		
-- ERROR:
File "XXXX", line 2
    if bruxo.lower() == "hermione"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:15) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.lower() == "hermione"
	print espaço (m):3.7654
	print tempo (s):2.3479
		bruxo= int(input"nome do bruxo: ")
		if bruxo .lower() == "gina"
		print (m): 3.674
			print (s): 2.789
		
		
-- ERROR:
File "XXXX", line 2
    if bruxo.lower() == "hermione"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:54) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  if bruxo.lower() == "hermione"
	print espaço (m):3.7654
	print tempo (s):2.3479
		bruxo= int(input("nome do bruxo: "))
		if bruxo .lower() == "gina"
		print (m): 3.674
			print (s): 2.789
		
		
-- ERROR:
File "XXXX", line 2
    if bruxo.lower() == "hermione"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:05) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" .lower(hermione)
	 (m):3.7654
	  (s):2.3479
		bruxo= int(input("nome do bruxo: "))
		print "gina" 
	 (m): 3.674
	 (s): 2.789
		
		
-- ERROR:
File "XXXX", line 2
    print "hermione" .lower(hermione)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:25) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" .lower(print)
	 (m):3.7654
	  (s):2.3479
		
-- ERROR:
File "XXXX", line 2
    print "hermione" .lower(print)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:42) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" .lower(print)
	 (m):
	  (s):
		
-- ERROR:
File "XXXX", line 2
    print "hermione" .lower(print)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:58) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" .lower(print)
(m):
(s):
		
-- ERROR:
File "XXXX", line 2
    print "hermione" .lower(print)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:24) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" 
 (m): if.lower (bruxo)
(s): 
		
-- ERROR:
File "XXXX", line 2
    print "hermione" 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:06) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" 
 (m): if.
(s): if
	
		
-- ERROR:
File "XXXX", line 2
    print "hermione" 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:07) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" 
 (m): if.
(s): if
	
		
-- ERROR:
File "XXXX", line 2
    print "hermione" 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:07) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" 
 (m): if.
(s): if
	
		
-- ERROR:
File "XXXX", line 2
    print "hermione" 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:08) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" 
 (m): if.
(s): if
	
		
-- ERROR:
File "XXXX", line 2
    print "hermione" 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:08) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" 
 (m): if.
(s): if
	
		
-- ERROR:
File "XXXX", line 2
    print "hermione" 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:09) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" 
 (m): if.
(s): if
	
		
-- ERROR:
File "XXXX", line 2
    print "hermione" 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:09) 
-- CODE:
bruxo = int(input("nome do bruxo:"))	
  print "hermione" 
 (m): if.
(s): if
	
		
-- ERROR:
File "XXXX", line 2
    print "hermione" 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:42) 
-- CODE:
bruxo = int(input("nome do bruxo:"))
print (m)
print (s) 		
-- EXECUTION TIME:
0.18369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2327/main.py", line 1, in <module>
    bruxo = int(input())
ValueError: invalid literal for int() with base 10: 'hermione'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:44) 
-- CODE:
bruxo = int(input("nome do bruxo:"))
print (m)
print (s) 		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo = int(input())
ValueError: invalid literal for int() with base 10: 'hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:09) 
-- CODE:
bruxo = int(input("nome do bruxo:"))
print (m): 
print (s):  		
-- ERROR:
File "XXXX", line 2
    print (m): 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:28) 
-- CODE:
bruxo = int(input("nome do bruxo:"))
print (m)
print (s) 		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo = int(input())
ValueError: invalid literal for int() with base 10: 'hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:47) 
-- CODE:
bruxo = int(input("nome do bruxo:"))
print (m)
print (s) 		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo = int(input())
ValueError: invalid literal for int() with base 10: 'hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:18) 
-- CODE:
bruxo = int(input("nome do bruxo:"))
print espaço m: 
print tempo s: 		
-- ERROR:
File "XXXX", line 2
    print espaço m: 
               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(espaço m:)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:09) 
-- CODE:
bruxo = int(input("nome do bruxo:"))
bruxo if.lower "hermione" == (m:)
bruxi if.lower "hermione" == (s:)
-- ERROR:
File "XXXX", line 2
    bruxo if.lower "hermione" == (m:)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:25) 
-- CODE:
bruxo = int(input("nome do bruxo:"))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    bruxo = int(input())
ValueError: invalid literal for int() with base 10: 'hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
